--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "name": "BM Bookmark Manager",
   "version": "2.1.7",
   "description": "Displays and organises your bookmarks",
-  "permissions": ["storage", "bookmarks", "history"],
+  "permissions": ["storage", "bookmarks", "history", "topSites"],
   "icons": {
     "16": "images/BM squish.png",
     "48": "images/BM squish@4x.png",
@@ -20,6 +20,6 @@
     "default_icon": "images/BM squish@8x.png"
   },
   "content_security_policy":
-  "script-src 'self' https://www.google-analytics.com https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js https://fonts.googleapis.com;  object-src 'self'",
+  "script-src 'self' https://www.google-analytics.com https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js https://fonts.googleapis.com ;  object-src 'self';",
   "manifest_version": 2
 }
