--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "BM Bookmark Manager",
+  "name": "Bookmark Manager",
   "version": "2.2.1",
   "description": "Displays and organises your bookmarks",
   "permissions": ["storage", "bookmarks", "history"],
